--- a/q/275350.html
+++ b/q/275350.html
@@ -26,16 +26,32 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>075</td><td>JavaScript ES11</td><td>240904T171431Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275355#275355">Arnauld</a></td></tr>
-<tr d-ix="1"><td>070</td><td>Ruby</td><td>240905T100333Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275369#275369">G B</a></td></tr>
-<tr d-ix="2"><td>019</td><td>Japt</td><td>240905T154442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275374#275374">Shaggy</a></td></tr>
-<tr d-ix="3"><td>084</td><td>Perl 5 + MathPrimeUtil</td><td>240905T120039Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275370#275370">Kjetil S</a></td></tr>
-<tr d-ix="4"><td>012</td><td>05AB1E</td><td>240905T070144Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275367#275367">Kevin Cr</a></td></tr>
-<tr d-ix="5"><td>027</td><td>Charcoal</td><td>240904T185258Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275356#275356">Neil</a></td></tr>
-<tr d-ix="6"><td>014</td><td>Jelly</td><td>240904T150642Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275352#275352">Jonathan</a></td></tr>
-<tr d-ix="7"><td>015</td><td>Stax</td><td>240904T162249Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275353#275353">Khuldrae</a></td></tr>
+<tr d-ix="0"><td>185</td><td>Python</td><td>240906T183420Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275395#275395">TheLittl</a></td></tr>
+<tr d-ix="1"><td>075</td><td>JavaScript ES11</td><td>240904T171431Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275355#275355">Arnauld</a></td></tr>
+<tr d-ix="2"><td>070</td><td>Ruby</td><td>240905T100333Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275369#275369">G B</a></td></tr>
+<tr d-ix="3"><td>019</td><td>Japt</td><td>240905T154442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275374#275374">Shaggy</a></td></tr>
+<tr d-ix="4"><td>084</td><td>Perl 5 + MathPrimeUtil</td><td>240905T120039Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275370#275370">Kjetil S</a></td></tr>
+<tr d-ix="5"><td>012</td><td>05AB1E</td><td>240905T070144Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275367#275367">Kevin Cr</a></td></tr>
+<tr d-ix="6"><td>027</td><td>Charcoal</td><td>240904T185258Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275356#275356">Neil</a></td></tr>
+<tr d-ix="7"><td>014</td><td>Jelly</td><td>240904T150642Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275352#275352">Jonathan</a></td></tr>
+<tr d-ix="8"><td>015</td><td>Stax</td><td>240904T162249Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275353#275353">Khuldrae</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES11), 75 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 185 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>r=range
+S=lambda j:j and S(j-1)*(S(j-1)+1)or 1
+Q=lambda k:[x for x in r(1,S(k)+1)if S(k)%x&lt;1and all(x%i for i in r(2,int(x**.5)+1))]
+F=lambda i:[min({*Q(z)}-{*Q(z-1)})for z in r(1,i+1)]
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=NU_LCsIwELz3K_Yi3e0LIghS7LX30qN4iGg1fUSJFaLil3jpRf_BT_FvTKw57ezszCzzeB0v_f4gh-F57qt4_nmrTHG523pl1vJuveFQpzVwuYES65hRgOMMGR0UMK9wsiZdaqgMp0FIUMiiEhsrExVYNNELZmN426KeiJ9UjNJpJGSPOgiSmTXQystdqkiXnZB4Cwq80j3-TfP9TtZ-dZ-Eca3-BZKjsml-jj6EcOoVzsgAn-zqQwaOzs2BaHS5-l8" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>I think I'm a glutton for punishment, trying to do these with Python... It's fun, though!</p>
+<ul>
+<li><code>S</code> is getting a list of Sylvester's sequence, recursively.</li>
+<li><code>Q</code> is getting all of the primes of <code>S</code></li>
+<li><code>F</code> is getting a list of the minimum values for range <code>1</code> to <code>i+1</code> (<code>z</code>) of <code>Q(z)</code>, excluding values in <code>Q(z-1)</code></li>
+</ul>
+<p>This is certainly <em>not</em> a fast solution.</p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES11), 75 bytes</h1>
 <p>Expects a Bigint <span class="math-container">\$n\$</span> and returns <span class="math-container">\$a(n)\$</span> as another Bigint.</p>
 <p>Computes <span class="math-container">\$a(1)\$</span> to <span class="math-container">\$a(12)\$</span> almost instantly.</p>
 
@@ -76,27 +92,27 @@
 </code></pre>
 <p><a href="https://tio.run/##FcxNDoMgFATgvadgYQ0U6I/L0mcPYkw0Vksb82jUEA3Qq1tczSxmvk9jm6kd399Zonl229YDRbFAjkLDCoXrzUgtXFGtB86t97pcz2CFrbLMSqmYCgwKTRfmvZT46Pf3Uf4WoUtbgWY3u@3E0M0ECZAIxbyT/LIXzhlxCSGtwckM3WkwL1o3NHUYWBynLnIs1EwlYfsD" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>72</s> 70 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>72</s> 70 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;n{r,*t=1;n.times{t&lt;&lt;(2..r*=r+1).find{|x|r%x&lt;1&amp;&amp;t.all?{|y|x%y&gt;0}}};t}
 </code></pre>
 <p><a href="https://tio.run/##KypNqvyfZvtf1y6vukhHq8TW0DpPryQzN7W4usTGRsNIT69Iy7ZI21BTLy0zL6W6pqKmSLXCxlBNrUQvMSfHvrqmsqZCtdLOoLa21rqk9n@BQlq0oUEsF4g2Moj9DwA" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 <p>Calculates f[20] in 30 seconds on TIO.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 19 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 19 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p>Outputs the first <code>n</code> terms. Produces inaccurate results for <code>n&gt;6</code> as we get into scientific notation &amp; floating point inaccuracies in the terms of the Sylvester Sequence.</p>
 <pre><code>È+²}h2ì)mk rÈpYkX Î
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=yCuyfWgy7CltayByyHBZa1ggzg&amp;input=Ng" rel="nofollow noreferrer">Try it</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> + Math::Prime::Util, 84 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> + Math::Prime::Util, 84 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>sub S{$_[0]?S($_[0]-1)*(S(-1+pop)+1):1}say+(grep!$s{$_}++,factor S($_))[0]for 1..pop
 </code></pre>
 <p><a href="https://tio.run/##K0gtyjH9/7@4NEkhuFolPtog1j5YA0zrGmpqaQRr6BpqF@QXaGobaloZ1hYnVmprpBelFiiqFANV12pr66QlJpfkFymANGlqArWlATmGenpAPf///zc0@JdfUJKZn1f8X9c3KTM9rzQXyCgz1TM0ANK@iSUZVlYBRZm5qVZWoSWZObYQwwA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 <p>For input 10 it outputs 2, 3, 7, 43, 13, 3263443, 547, 29881, 5295435634831, 181. Runtime for n=10 varies a lot. From 12 seconds and up.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>15</s> 12 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>15</s> 12 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>$FD&gt;*Df¯Kß=ˆ
 </code></pre>
 <p>Given <span class="math-container">\$n\$</span>, it'll output the first <span class="math-container">\$n\$</span> values on separated lines.</p>
@@ -144,7 +160,7 @@ f         # Map each inner value to a list of its unique prime factors
         ª #  Add it to the list for the next iteration
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 27 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 27 bytes</h1>
 <pre><code>≔¹ηＦＮ«≧×⊕ηη⊞υ²Ｗ﹪ηΠυ⊞υ⊕⊟υ»Ｉυ
 </code></pre>
 <p><a href="https://tio.run/##TYy9CsIwFEbn5inueANxqODUSZw6VIL4AjGNTSBNQn50EJ891hbB7Tt8hyO1iNILW@sxJTM5bBlo2pG7j4C9CyWfy3xTESmFF2kGETbvYiad8WpmlRj0TkY1K5fViJpugYaXpLEw2H/hqY1VgIMfi/WoGfC4TJmx0CX8U/873If17Mib8GhcxpNIq9/V2h7q7mE/" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Can calculate up to <code>n=18</code> on TIO. Explanation: Assumes without proof that Sylvester's sequence is square-free.</p>
@@ -170,7 +186,7 @@ f         # Map each inner value to a list of its unique prime factors
 </code></pre>
 <p>Output the primes.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 15 </s> 14 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 15 </s> 14 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <p><sup>I'm not convinced this is as terse as possible.</sup></p>
 <pre><code>1‘×$Ð¡ÆfḟṂṭɗ@/
 </code></pre>
@@ -193,7 +209,7 @@ f         # Map each inner value to a list of its unique prime factors
           ṭ    -       tack to {left}
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, 15 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, 15 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
 <p><sup>I'm not convinced this is as terse as possible.</sup></p>
 <pre><code>Çö╫k1,`♠y&amp;∞ìσ▀╕
 </code></pre>
