--- a/q/105998.html
+++ b/q/105998.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>193</td><td>Zsh</td><td>240906T084713Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275383#275383">roblogic</a></td></tr>
-<tr d-ix="1"><td>063</td><td>Japt R</td><td>240807T135148Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/274755#274755">Shaggy</a></td></tr>
+<tr d-ix="0"><td>062</td><td>Japt R</td><td>240807T135148Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/274755#274755">Shaggy</a></td></tr>
+<tr d-ix="1"><td>193</td><td>Zsh</td><td>240906T084713Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275383#275383">roblogic</a></td></tr>
 <tr d-ix="2"><td>194</td><td>Java JDK</td><td>240905T154702Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275375#275375">Fhuvi</a></td></tr>
 <tr d-ix="3"><td>151</td><td>ARBLE</td><td>240906T021006Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275381#275381">ATaco</a></td></tr>
 <tr d-ix="4"><td>092</td><td>Uiua</td><td>240905T202922Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275379#275379">noodle p</a></td></tr>
@@ -63,20 +63,13 @@
 <tr d-ix="34"><td>179</td><td>C</td><td>170107T171910Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106005#106005">simon</a></td></tr>
 <tr d-ix="35"><td>173</td><td>JavaScript ES6</td><td>170107T170956Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106004#106004">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <sub><s>239</s></sub> 193 bytes</h1>
-<pre class="lang-sh prettyprint-override"><code>t=&quot;Dec  Chr   | &quot;;&lt;&lt;&lt;$t$t$t[1,8];jot -b - -s '' 34
-for n ({32..63})for i (0 32 64){k=$[n+i];c=${(#)k};((k&lt;33))&amp;&amp;c=Space
-((k&gt;126))&amp;&amp;c=DEL;f='%-5s%-6s| ';((i&gt;32))&amp;&amp;f='%-5s%-5s\n';printf $f $k $c}
-</code></pre>
-<p><a href="https://tio.run/##PYuxDoIwAER3v@KChbbRGmmRmJSyqJubIzpoIwFJ0FAmkW9HiIm5W@693NsVw9Aab3@3wK5oAHzg6SRJSDslC5fbi348W4gbBIQDpVDRLH82qME6JVerWPV82iXYGkoijnhXGZLVi/KirSEdm/Oq14xViVKcB4E1p9fV3mcjSUMZ/9D@cNS5ob7YOF/E7gM6PspUyUn/xcada6pfTVm3OcjYCsT2w/AF" rel="nofollow noreferrer">Try it online!</a>
-<sub><s><a href="https://tio.run/##XY6xDoIwFEV3vuIFi0CURqigCbxJ3NwciYMpEFzahjIJ/XYEjMaYu56cc5@6GccO7bziAKemBYAB7DTLMtLNK8Lt8Zaq9iG6GgKH7jT0IaVsb9KKN9KqZQsCvJ5FlCbM@D1H0nsrX5jU8wQii3x/veZ4VXdefTyuE8TaCRI9uEAEEG5JJIXYsOibcuGXkbBIpbHUBMoFLN8hNYcUYhgd5lKJ@fnyL4n15FBAyuWzGccX" rel="nofollow noreferrer" title="Zsh – Try It Online">239b</a></s></sub></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, <s>65</s> <s>64</s> 63 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, <s>65</s> <s>64</s> <s>63</s> 62 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p><em>Still</em> not happy the insertion of the line of dashes. Another approach may be needed.</p>
 <pre><code>Hó96
-íUmd h`Spa­` hJ&quot;DEL&quot;)òH Ëi&quot;DCehcr&quot;ó)ú4 m¸úBÃÕmqSi|)i1'-p34
+íUmd h`Spa­` hJ&quot;DEL&quot;)òH Ëi&quot;DCehcr&quot;ó)ú5 m¬úBÃÕËqSi|)xÃyÈiÉ
 </code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LVI&amp;code=SPM5NgrtVW1kIGhgU3BhrWAgaEoiREVMIinySCDLaSJEQ2VoY3Ii8yn6NCBtuPpCw9VtcVNpfClpMSctcDM0" rel="nofollow noreferrer">Test it</a></p>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LVI&amp;code=SPM5NgrtVW1kIGhgU3BhrWAgaEoiREVMIinySCDLaSJEQ2VoY3Ii8yn6NSBtrPpCw9XLcVNpfCl4w3nIack" rel="nofollow noreferrer">Test it</a></p>
+<h2>(Outdated 63 byte) Explanation</h2>
 <pre><code>Hó96\níUmd h`Spa­` hJ&quot;DEL&quot;)òH Ëi&quot;DCehcr&quot;ó)ú4 m¸úBÃÕmqSi|)i1'-p34
 H                                                                   :32
  ó96                                                                :Range [H,H+96]
@@ -112,6 +105,14 @@ H                                                                   :32
                                                           '-p34     :  &quot;-&quot; repeated 34 times
                                                                     :Implicit output joined with newlines
 </code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <sub><s>239</s></sub> 193 bytes</h1>
+<pre class="lang-sh prettyprint-override"><code>t=&quot;Dec  Chr   | &quot;;&lt;&lt;&lt;$t$t$t[1,8];jot -b - -s '' 34
+for n ({32..63})for i (0 32 64){k=$[n+i];c=${(#)k};((k&lt;33))&amp;&amp;c=Space
+((k&gt;126))&amp;&amp;c=DEL;f='%-5s%-6s| ';((i&gt;32))&amp;&amp;f='%-5s%-5s\n';printf $f $k $c}
+</code></pre>
+<p><a href="https://tio.run/##PYuxDoIwAER3v@KChbbRGmmRmJSyqJubIzpoIwFJ0FAmkW9HiIm5W@693NsVw9Aab3@3wK5oAHzg6SRJSDslC5fbi348W4gbBIQDpVDRLH82qME6JVerWPV82iXYGkoijnhXGZLVi/KirSEdm/Oq14xViVKcB4E1p9fV3mcjSUMZ/9D@cNS5ob7YOF/E7gM6PspUyUn/xcada6pfTVm3OcjYCsT2w/AF" rel="nofollow noreferrer">Try it online!</a>
+<sub><s><a href="https://tio.run/##XY6xDoIwFEV3vuIFi0CURqigCbxJ3NwciYMpEFzahjIJ/XYEjMaYu56cc5@6GccO7bziAKemBYAB7DTLMtLNK8Lt8Zaq9iG6GgKH7jT0IaVsb9KKN9KqZQsCvJ5FlCbM@D1H0nsrX5jU8wQii3x/veZ4VXdefTyuE8TaCRI9uEAEEG5JJIXYsOibcuGXkbBIpbHUBMoFLN8hNYcUYhgd5lKJ@fnyL4n15FBAyuWzGccX" rel="nofollow noreferrer" title="Zsh – Try It Online">239b</a></s></sub></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="http://jdk.java.net/" rel="nofollow noreferrer">Java (JDK)</a>, 194 <sup><s>200</s></sup> bytes</h1>
 <blockquote>
