--- a/q/105998.html
+++ b/q/105998.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>062</td><td>Japt R</td><td>240807T135148Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/274755#274755">Shaggy</a></td></tr>
+<tr d-ix="0"><td>060</td><td>Japt R</td><td>240807T135148Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/274755#274755">Shaggy</a></td></tr>
 <tr d-ix="1"><td>193</td><td>Zsh</td><td>240906T084713Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275383#275383">roblogic</a></td></tr>
 <tr d-ix="2"><td>194</td><td>Java JDK</td><td>240905T154702Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275375#275375">Fhuvi</a></td></tr>
 <tr d-ix="3"><td>151</td><td>ARBLE</td><td>240906T021006Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275381#275381">ATaco</a></td></tr>
@@ -63,12 +63,12 @@
 <tr d-ix="34"><td>179</td><td>C</td><td>170107T171910Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106005#106005">simon</a></td></tr>
 <tr d-ix="35"><td>173</td><td>JavaScript ES6</td><td>170107T170956Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106004#106004">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, <s>65</s> <s>64</s> <s>63</s> 62 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, <s>65</s> <s>64</s> <s>63</s> <s>62</s> 60 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p><em>Still</em> not happy the insertion of the line of dashes. Another approach may be needed.</p>
 <pre><code>Hó96
-íUmd h`Spa­` hJ&quot;DEL&quot;)òH Ëi&quot;DCehcr&quot;ó)ú5 m¬úBÃÕËqSi|)xÃyÈiÉ
+íUmd h`Spa­` hJ&quot;DEL&quot;)òH Ëi&quot;DCehcr&quot;ó)ú5 m¬ÃÕËq|û3)xÃyÈiÉ
 </code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LVI&amp;code=SPM5NgrtVW1kIGhgU3BhrWAgaEoiREVMIinySCDLaSJEQ2VoY3Ii8yn6NSBtrPpCw9XLcVNpfCl4w3nIack" rel="nofollow noreferrer">Test it</a></p>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LVI&amp;code=SPM5NgrtVW1kIGhgU3BhrWAgaEoiREVMIinySCDLaSJEQ2VoY3Ii8yn6NSBtrMPVy3F8%2bzMpeMN5yGnJ" rel="nofollow noreferrer">Test it</a></p>
 <h2>(Outdated 63 byte) Explanation</h2>
 <pre><code>Hó96\níUmd h`Spa­` hJ&quot;DEL&quot;)òH Ëi&quot;DCehcr&quot;ó)ú4 m¸úBÃÕmqSi|)i1'-p34
 H                                                                   :32
