--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240907T021100Z
+"   /golfscore                                      20240907T055727Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/132981.html">Tips for golfing in x86/x64 machine code        : 0132981</a>
 <a href="q/275210.html">Parse Minecrafts VarInt                         : 0275210</a>
 <a href="q/269204.html">Divmod continuously until the remainder is 1 or : 0269204</a>
 <a href="q/71822.html">Filter out and add up                           : 0071822</a>
