--- a/q/85141.html
+++ b/q/85141.html
@@ -26,11 +26,11 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>178</td><td>Setanta</td><td>240729T011355Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/274540#274540">bb94</a></td></tr>
-<tr d-ix="1"><td>140</td><td>C GCC</td><td>230907T170303Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/265018#265018">matteo_c</a></td></tr>
-<tr d-ix="2"><td>051</td><td>x86 realmode COM file</td><td>240722T150955Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/274328#274328">Paolo Bo</a></td></tr>
-<tr d-ix="3"><td>212</td><td>Chipmunk BASIC</td><td>230906T065315Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/264967#264967">roblogic</a></td></tr>
-<tr d-ix="4"><td>051</td><td>Uiua</td><td>240528T165953Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/273335#273335">noodle p</a></td></tr>
+<tr d-ix="0"><td>050</td><td>Uiua</td><td>240528T165953Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/273335#273335">noodle p</a></td></tr>
+<tr d-ix="1"><td>178</td><td>Setanta</td><td>240729T011355Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/274540#274540">bb94</a></td></tr>
+<tr d-ix="2"><td>140</td><td>C GCC</td><td>230907T170303Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/265018#265018">matteo_c</a></td></tr>
+<tr d-ix="3"><td>051</td><td>x86 realmode COM file</td><td>240722T150955Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/274328#274328">Paolo Bo</a></td></tr>
+<tr d-ix="4"><td>212</td><td>Chipmunk BASIC</td><td>230906T065315Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/264967#264967">roblogic</a></td></tr>
 <tr d-ix="5"><td>157</td><td>BASH</td><td>230906T171238Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/264992#264992">Ivan</a></td></tr>
 <tr d-ix="6"><td>156</td><td>NES 6502 Assembly</td><td>230503T182620Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/260665#260665">testc</a></td></tr>
 <tr d-ix="7"><td>334</td><td>Go + github.com/fogleman/gg</td><td>230316T155427Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/259186#259186">bigyihsu</a></td></tr>
@@ -117,12 +117,19 @@
 <tr d-ix="88"><td>136</td><td>Processing</td><td>160711T180446Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/85183#85183">Cody</a></td></tr>
 <tr d-ix="89"><td>164</td><td>SVG+Javascript</td><td>160711T154406Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/85171#85171">nicael</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 178 bytes</h1>
+<div id="pu0" class="pu"><h1>Uiua, <s>51</s> 50 bytes</h1>
+<pre><code>≡▽⟜▽9÷99⨬(0_28_87|↯3∞|⊂84⊟.16)↻9_¯9↧2⊞↧∩↧∩⟜⇌⇡18⇡25
+</code></pre>
+<p><a href="https://uiua.org/pad?src=0_13_0-dev_2__4omh4pa94p-c4pa9OcO3OTniqKwoMF8yOF84N3zihq8z4oiefOKKgjg04oqfLjE2KeKGuzlfwq854oanMuKKnuKGp-KIqeKGp-KIqeKfnOKHjOKHoTE44oehMjUK" rel="nofollow noreferrer">Try it online!</a></p>
+<p>In 0..18 and 0..25, take the minimum of each with the reversed range, then take the addition table of the two. This gives sort of a border, we take the minimum of each with 2 to get the blue then white then the rest red border. Rotate (offset) the image by 9 and -9, giving the flag with blue pixels as 0s, white as 1s, and red as 2. Convert each to its RGB triplet ratio, then scale up to the right size.</p>
+<p>Instead of using <code>[1 1 1]</code> for white, I used <code>[∞ ∞ ∞]</code> because it doesn't need a space after <code>↯3</code>, saving a byte.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 178 bytes</h1>
 <pre><code>S:=staitse C:=dath@S D:=gniomh(a,b,c,d){cruth_lan@S([[a,b],[a,d],[c,d],[c,b]])}C(&quot;#0048e0&quot;)D(0,0,100,72)C(&quot;ban&quot;)D(28,0,44,72)D(0,28,100,44)C(&quot;#d72828&quot;)D(32,0,40,72)D(0,32,100,40)
 </code></pre>
 <p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgIDwxcrVCA" rel="nofollow noreferrer">try-setanta.ie link</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C (GCC)</a>, <s>167</s> 140 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C (GCC)</a>, <s>167</s> 140 bytes</h1>
 <ul>
 <li><em>~25 bytes thanks to <a href="https://codegolf.stackexchange.com/users/52904/ceilingcat">@ceilingcat</a></em></li>
 </ul>
@@ -130,7 +137,7 @@
 </code></pre>
 <p>Set encoding to <code>ANSI</code>, so each character corresponds to a single byte, and replace <code>\0</code> with a <code>NUL</code> byte. Outputs to <code>stdout</code> a PPM image.</p>
 </div>
-<div id="pu2" class="pu"><h1>x86 real-mode COM file, text mode, <strike>57</strike> <strike>56</strike> <strike>55</strike> <strike>54</strike> <strike>53</strike> 51 bytes</h1>
+<div id="pu3" class="pu"><h1>x86 real-mode COM file, text mode, <strike>57</strike> <strike>56</strike> <strike>55</strike> <strike>54</strike> <strike>53</strike> 51 bytes</h1>
 <p>Because text mode is 80x25, one column of the flag corresponds to two on screen. One could actually save one byte by producing the flag with the wrong aspect ratio.</p>
 <p>Another byte could be saved by using the CMOVA instruction instead of JBE+MOV at 125/127, but I'm sticking to x86 lowest common denominator.</p>
 <p><a href="https://i.sstatic.net/jtMiyeTF.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/jtMiyeTF.png" alt="Output from FreeDOS session running in DOSBOX" /></a></p>
@@ -178,7 +185,7 @@ q
 <p>54-&gt;53: replace CMP AL,1 with SUB to avoid SALC</p>
 <p>53-&gt;51: reuse XCHG instruction</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="http://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk BASIC</a>, <s>238</s> <s>235</s> 212 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="http://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk BASIC</a>, <s>238</s> <s>235</s> 212 bytes</h1>
 <p>Chipmunk Basic v368b2.02 on MacOS. The RGB range is <code>[0,100]</code>.</p>
 <pre><code>graphics 0
 k(0,28,88):f(0,0,150,108)
@@ -188,12 +195,6 @@ sub f(a,b,c,d):graphics fillrect a,b,c,d:return
 sub k(r,g,b):graphics color r,g,b:return
 </code></pre>
 <img src="https://i.sstatic.net/Jj7ym.png" width="330"/>
-</div>
-<div id="pu4" class="pu"><h1>Uiua, 51 bytes</h1>
-<pre><code>≡▽9▽9÷99⟨0_28_87|+99⊚3|⊂84⊟.16⟩↻9_¯9↧2⊞↧∩↧∩⟜⇌⇡18⇡25
-</code></pre>
-<p><a href="https://uiua.org/pad?src=0_11_0-dev_1__4omh4pa9OeKWvTnDtzk54p-oMF8yOF84N3wrOTniipozfOKKgjg04oqfLjE24p-p4oa7OV_Crznihqcy4oqe4oan4oip4oan4oip4p-c4oeM4oehMTjih6EyNQo=" rel="nofollow noreferrer">Try it online!</a></p>
-<p>In 0..18 and 0..25, take the minimum of each with the reversed range, then take the addition table of the two. This gives sort of a border, we take the minimum of each with 2 to get the blue then white then the rest red border. Rotate (offset) the image by 9 and -9, giving the flag with blue pixels as 0s, white as 1s, and red as 2. Convert each to its RGB triplet ratio, then scale up to the right size.</p>
 </div>
 <div id="pu5" class="pu"><h1>BASH - 157 bytes</h1>
 <pre><code>r=\\e[41m;b=\\e[44m;w=\\e[47m;d=\\e[0m;for i in {1..18};{ n=$b;j=$w;((i==8||i==11))&amp;&amp;n=$w;((i==9||i==10))&amp;&amp;n=$r j=$r;printf &quot;$n%14s$j  $r%4s$j  $n%28s$d\n&quot;;}
