--- a/q/125383.html
+++ b/q/125383.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>019</td><td>K ngn/k</td><td>240906T205555Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/275397#275397">coltim</a></td></tr>
+<tr d-ix="0"><td>018</td><td>K ngn/k</td><td>240906T205555Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/275397#275397">coltim</a></td></tr>
 <tr d-ix="1"><td>073</td><td>Raku Perl 6 rakudo</td><td>240719T070029Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/274257#274257">bb94</a></td></tr>
 <tr d-ix="2"><td>193</td><td>Go</td><td>240501T202352Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/272915#272915">bigyihsu</a></td></tr>
 <tr d-ix="3"><td>022</td><td>Pip l</td><td>240515T222338Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/273116#273116">DLosc</a></td></tr>
@@ -73,17 +73,19 @@
 <tr d-ix="44"><td>021</td><td>V</td><td>170608T182709Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/125390#125390">DJMcMayh</a></td></tr>
 <tr d-ix="45"><td>006</td><td>Charcoal</td><td>170608T182441Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/125389#125389">Okx</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 19 bytes</h1>
-<pre><code>&quot; /\\X&quot;@2/1|:\=1+2*
+<div id="pu0" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, <s>19</s> 18 bytes</h1>
+<p>-1 byte from @att</p>
+<pre><code>&quot;X\\/&quot;@2/~|:\=1+2*
 </code></pre>
-<p><a href="https://ngn.codeberg.page/k#eJx10s0KgzAMB/C7T/Gn7KCbEPVoGewxBCu4izA2GMgOk308+yy1Nm1nTy2/JE1LhlqAlGrEqaLyXatjeaj2SfKoX7t2+o71AOAp+/tVpv1wvtzkU05yzLrPHNMWMs9FI7p5W8pUKAUSCfQSaGC3BKVEpoMqEwQWpnPWSMxZ7qDzWBGsZcrC1gmXrWsKRwrHsRM4h67v5+w7IWTuhJidE/6x9UUjNm41ZvOx26x/eluJtx8xec8LmfznBWx7su6z63hxj51a58x1cca+GnccKtjomdmLfZ7FH/digcQ=" rel="nofollow noreferrer">Try it online!</a></p>
+<p><a href="https://ngn.codeberg.page/k/#eJx10sEKwjAMBuD7nuKneHA6iNtxRfAxBqugl4EoCMPDhrpnt6Xrmraup5YvSdOSrhaNUiROFU2fWh3LfbXLslf93rTj1NcdgEFenne5vXTX20MOcpR9fv7qmPYgi0I04qy3pdwKpUAig1kCDdyWoJTITVBlg8DCTM4SCZ3lDyaPFcFSpjy4OvFydW3hROE5dQLn2M39nEMnxMydkLJ3wj92PmvC1p2mbD92nc1Pryvx9hOm4HkxU/i8iF1PzkP2Hc8esFfnnLnOzjhU655jBRs9O3up61n8AYWmgfE=" rel="nofollow noreferrer">Try it online!</a></p>
 <p>Thanks to @tubular.</p>
 <ul>
 <li><code>1+2*</code> multiply the (implicit) input by 2, then add 1</li>
 <li><code>=</code> generate an identity matrix of the above size</li>
-<li><code>1|:\</code> return a list containing the identity matrix and its reverse (i.e. the antidiagonal)</li>
+<li><code>|:\</code> return a list containing the identity matrix and its reverse (i.e. the antidiagonal)</li>
+<li><code>~</code> &quot;not&quot; the above, i.e. convert 1's to 0's and 0's to 1's</li>
 <li><code>2/</code> convert to base-2</li>
-<li><code>&quot; /\\X&quot;@</code> index into a string containing the appropriate characters</li>
+<li><code>&quot;X\\/&quot;@</code> index into a string containing the appropriate characters</li>
 </ul>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, <s>85</s> 73 bytes</h1>
