--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240907T184437Z
+"   /golfscore                                      20240907T185354Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/146059.html">Is my triangle right?                           : 0146059</a>
 <a href="q/249247.html">Print the ASCII Code page                       : 0249247</a>
 <a href="q/275210.html">Parse Minecrafts VarInt                         : 0275210</a>
 <a href="q/235964.html">Implement the hyperfactorial                    : 0235964</a>
