--- a/q/190324.html
+++ b/q/190324.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>052</td><td>Uiua</td><td>240905T230628Z</td><td><a href="https://codegolf.stackexchange.com/questions/190324/how-much-code-would-a-codegolf-golf-if-a-codegolf-could-golf-code/275380#275380">noodle p</a></td></tr>
+<tr d-ix="0"><td>050</td><td>Uiua</td><td>240905T230628Z</td><td><a href="https://codegolf.stackexchange.com/questions/190324/how-much-code-would-a-codegolf-golf-if-a-codegolf-could-golf-code/275380#275380">noodle p</a></td></tr>
 <tr d-ix="1"><td>029</td><td>Stax</td><td>190819T181935Z</td><td><a href="https://codegolf.stackexchange.com/questions/190324/how-much-code-would-a-codegolf-golf-if-a-codegolf-could-golf-code/190340#190340">Khuldrae</a></td></tr>
 <tr d-ix="2"><td>030</td><td>05AB1E</td><td>190820T075853Z</td><td><a href="https://codegolf.stackexchange.com/questions/190324/how-much-code-would-a-codegolf-golf-if-a-codegolf-could-golf-code/190389#190389">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>061</td><td>PHP</td><td>190925T174738Z</td><td><a href="https://codegolf.stackexchange.com/questions/190324/how-much-code-would-a-codegolf-golf-if-a-codegolf-could-golf-code/193542#193542">Night2</a></td></tr>
@@ -80,12 +80,17 @@
 <tr d-ix="51"><td>072</td><td>PHP</td><td>190819T174643Z</td><td><a href="https://codegolf.stackexchange.com/questions/190324/how-much-code-would-a-codegolf-golf-if-a-codegolf-could-golf-code/190329#190329">640KB</a></td></tr>
 <tr d-ix="52"><td>059</td><td>Kotlin</td><td>190819T174423Z</td><td><a href="https://codegolf.stackexchange.com/questions/190324/how-much-code-would-a-codegolf-golf-if-a-codegolf-could-golf-code/190328#190328">Quinn</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Uiua, 52 bytes</h1>
-<pre><code>$&quot;How much _ would a __ _ if a __ could _ _?&quot;⊃∩.⊃⊙∘:
+<div id="pu0" class="pu"><h1>Uiua, <s>52</s> 50 bytes</h1>
+<pre><code>$&quot;How much _ would a __ _ if a _ could _ _?&quot;⊃∩.⊃⊂:
 </code></pre>
-<p>Try it: <a href="https://uiua.org/pad?src=0_13_0-dev_2__RiDihpAgJCJIb3cgbXVjaCBfIHdvdWxkIGEgX18gXyBpZiBhIF9fIGNvdWxkIF8gXz8i4oqD4oipLuKKg-KKmeKImDoKCiZwIEYgIndvb2QiICJjaHVjayIKJnAgRiAiZ3JvdWQiICJob2ciCiZwIEYgIndvdWxkIGEiICJob3cgbXVjaCIK" rel="nofollow noreferrer">Uiua pad</a></p>
-<p>Explanation: Each <code>_</code> in the <code>$&quot;...&quot;</code> string is replaced with a value from the stack. <code>⊃∩.⊃⊙∘:</code> is used to put the strings on the stack in the proper order:</p>
-<p>To compose the expression <code>⊃∩.⊃⊙∘:</code> (which is written in golfed &quot;planet-notation&quot;), I started with knowing the order I wanted to end up with: <code>aabbabba</code>. I divided that into three parts: <code>aabb</code>, <code>ab</code>, <code>ba</code>. You can get <code>aabb</code> by duplicating both <code>a</code> and <code>b</code> (<code>∩.</code>). You can get <code>ab</code> by doing nothing to both values (<code>⊙∘</code>). You can get <code>ba</code> by swapping the two (<code>:</code>). The three parts are then composed with a fork (<code>⊃</code>).</p>
+<p>Try it: <a href="https://uiua.org/pad?src=0_13_0-dev_2__RiDihpAgJCJIb3cgbXVjaCBfIHdvdWxkIGEgX18gXyBpZiBhIF8gY291bGQgXyBfPyLiioPiiKku4oqD4oqCOgoKJnAgRiAid29vZCIgImNodWNrIgomcCBGICJncm91bmQiICJob2ciCiZwIEYgIndvdWxkIGEiICJob3cgbXVjaCIK" rel="nofollow noreferrer">Uiua pad</a></p>
+<p>Explanation: Each <code>_</code> in the <code>$&quot;...&quot;</code> string is replaced with a value from the stack. <code>⊃∩.⊃⊂:</code> is used to put the strings on the stack in the proper order:</p>
+<p><code>⊃∩.⊃⊂:</code> is a fork that does three things:</p>
+<ol>
+<li><code>∩.</code> pushes each string twice, filling the first four slots</li>
+<li><code>⊂</code> joins the two strings, filling the next slot</li>
+<li><code>:</code> flips the two, filling the last two slots.</li>
+</ol>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, <s>33</s> <s>31</s> <s>30</s> 29 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
 <p>-1 thanks to <a href="https://codegolf.stackexchange.com/users/527/recursive">recursive</a>!</p>
