--- a/q/235964.html
+++ b/q/235964.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>069</td><td>Swift 6</td><td>240907T215801Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/275405#275405">macOSist</a></td></tr>
-<tr d-ix="1"><td>208</td><td>sed 4.2.2 r</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
+<tr d-ix="0"><td>207</td><td>sed 4.2.2 r</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
+<tr d-ix="1"><td>069</td><td>Swift 6</td><td>240907T215801Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/275405#275405">macOSist</a></td></tr>
 <tr d-ix="2"><td>018</td><td>ARBLE</td><td>240903T225838Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/275338#275338">ATaco</a></td></tr>
 <tr d-ix="3"><td>045</td><td>Clojure</td><td>240903T135137Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/275319#275319">NikoNyrh</a></td></tr>
 <tr d-ix="4"><td>048</td><td>Setanta</td><td>240720T221415Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274301#274301">bb94</a></td></tr>
@@ -113,31 +113,30 @@
 <tr d-ix="84"><td>005</td><td>Husk</td><td>211004T081650Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235966#235966">Dominic </a></td></tr>
 <tr d-ix="85"><td>008</td><td>Charcoal</td><td>211004T081405Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235965#235965">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Swift 6, 69 bytes</h1>
-<pre class="lang-swift prettyprint-override"><code>import Foundation
-let h={(1...$0).map{pow(.init($0),$0)}.reduce(1,*)}
-</code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <sup><sub><sub><sup><s>291</s> <s>287</s> <s>276</s> <s>260</s> <s>255</s> <s>251</s> <s>248</s> <s>240</s> <s>233</s> <s>228</s> <s>226</s> <s>220</s> <s>219</s> <s>212</s> <s>209</s></sup></sub></sub></sup> 208 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <sup><sub><sub><sup><s>291</s> <s>287</s> <s>276</s> <s>260</s> <s>255</s> <s>251</s> <s>248</s> <s>240</s> <s>233</s> <s>228</s> <s>226</s> <s>220</s> <s>219</s> <s>212</s> <s>209</s> <s>208</s></sup></sub></sub></sup> 207 bytes</h1>
 <pre><code>h;G;G
-:a;s/.//;x;s/\s.*//;tc
-:b;x;s/#*/&amp; &amp;/;T
-:c;x;s/^#//;tb
-s/..//;H;g;s/ ?//g;T
-s/\n##+\n/&amp;/;ta
-s/^(#+).#.(#*)#/\2\n\2\n\2&#9;\1/;h;ta
-s/....//;h;s/.*/#/;t
-:d;s/#+/&amp;&#9;&amp;/;T
-:;x;s/^#//;x;td
+:;s/.//;x;s/\s.*//
+:a;s/#*/&amp; &amp;/;T;x;s/^##/#/;x;ta
+x;s/#.#//;H;g;s/ ?//g;T
+s/\n##+\n/&amp;/;t
+s/^(#+).#.(#*)#/\2\n\2\n\2&#9;\1/;h;t
+s/....//;h;s/.*/#/;tc
+:b;s/#+/&amp;&#9;&amp;/;T
+:c;x;s/^#//;x;tb
 s/&#9;?//g;T
-x;s/&#9;#//;x;t
+x;s/&#9;#//;x;tc
 </code></pre>
-<p><a href="https://tio.run/##RVDLboMwEDzjr4i0EgKj7GCSJsVG6TH9gN7qRkpCBL2QqnBIf750DWl7sHZ3vPOw@0s92ovr8WqW5RtiQqO@YIrV@mGzfSyR/7ZQPShHSXBD2M@BZmzd3u2VPcrMgLtJ9T1raYezsqcJII14EcO9KHuegAOF@5PocSA9u0bAxZPoyY4IdESZ7yCU4SjzIaEsZeKEdErwhe/mE3kD1847zJNUG3JohIjK1sE7QxzN3v/WNzfUwonujgGP7vhoQxZCVf39AOVmF96ecFqx9kZicMp6J0nEphlzZVShVmr9ff0Y3q9dPy4/fwA" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-4, ~30-45 seconds)</a><br />
-<a href="https://tio.run/##hZDBboMwDIbP5CkqWUIQ1Dih7TYI6o7dA@zWrFIoFaUHOi0cOk179TGntCvqZZFQ/P@xPxu7XdXnO@1wrabZG4aANftElc7mi4fHpwzlNUTmECRmgLrz@RKx7vd6pVcst6QFoj7RbZzgFHZblpdnAziGkxD1K8u3Z2MD/r0knvDRi67JnDwTj3II0AIkpkUq6SzpTQRJLEBEwGNAk5p2@AKjUO@HHEEHvaKQox@R5ZXvnWAYDL1vrU@6q6gmuHT0fnDxeyr5UlLKb7S0CIf2okpSeUOZJRbF33ZKqZZ@L5GIC8GNikouYsGXNCWN0NDLWtJWaQiCXAl2TLD3BPsP4eD/akyAewKMCYdeMsVSNmNztvg5vnfNsXX99OMX" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-5, ~50-75 seconds; more efficient/less elegant footer)</a><br />
-<a href="https://tio.run/##XZDPbsIwDMbP81MgWaraVNhJ@bc2FTuyB9iNDCkwVMqhINLDpmmvvs4BbUI7RPlsf/45Tti/DdXeBl6bcfnKCXIDH2yKyXQ2XzyWrH8lQ2DUXCLbPvo1czMc7MquoPISE7N9l9sFUiL7HVTbawIVJ6OE7QtUu2tig7G@FR5F9WwbSY6ehCceAXSIuetYWnov8SbFPCOkFFWG7ArX3c6DM2wPNw@RjB9k1qfRWn@xly2qVrCe6/pvGa/NMq6RUlaTcib1ijJSS4HKrFYqay2fkHMikEg4xuffE/A/Ae8Jx0GDgQImMIUZzGHxfTr37akLw/jyAw" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-7, ~15-30 seconds; calculate the powers but don't multiply them together)</a></p>
+<p><a href="https://tio.run/##PVBBbsIwEDxnX4G0UpQ4whMHCo0d0SN9ALcaJEhR6CVUjQ/t55uu07SWLM@sZ3fGHq6vo726AS9mWR@RMjr6gqlW64fN9rFG@QdBA7hEzXAh6kugG29u7/ZkhWrAfcrpB60AsmfBrJAuUrjDdHNiBkdROFPkrFl6nl0nePEk09xBLHzPXPge0haEnjIucs06Y5UzfOX73514A3ebJFoWIhGookNoyV6iQYE0ifZk2znBFDJcpCuZHWM9mevtaGMYRtP8fwCXZhefnum80cobCaJzrXaSRZy6sSRDFa1o/X1/D2/3fhiXHz8" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-4, ~30-45 seconds)</a><br />
+<a href="https://tio.run/##hZDLboMwEEXX@CsijYTAUXztPNqCUbpMPyC7uJFMWuWxIFVh0Yf666VjSiqUTZEQc@2Zcy9TPz@1@YetsTGT7BExYS/eYaaz@eLm9i6DvpQQNUgjI9gm9Gtg3x7syq5EzlIB9o2/rlYSELnnmiTiUQy77m62RKDQ1HgRNCnimQe753p0zzS7ZgtXEY1dBR5rWG4TGqeKVEIyJbipq37fyBnYQ9ei@EEQXMrg0OxEXgaDMeIo2It81yfoQjYlT0W9YziP@vNdy0OfRmv9Bc97qOF7VbLKj9xaoij@llNqswxrSVRaKOlMUkqVKrnknJziyDcbzUvlGAy5EPyQ4K8J/h/CKfzXkEDXBBoSTq0WRkzFTMzF4vv80hzPVd1OXn8A" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-5, ~50-75 seconds; more efficient/less elegant footer)</a><br />
+<a href="https://tio.run/##XZDdasMwDIWvp6coCELiUB87/U0cusvuAXpXr2BYSdOLtCy52Bh79WVyx0aZwVgHHX2S3B9fxuroeuzttHxGwmjoHbaYzRfL1bqE@Q1BPdigZLgh@g3QjCe3dVuqRGrAvcnre60AqoLErJBMErjdLXNgBkfTEChq1iw1T66RePIoNLeTFr5jzn0HKRtEHlLOM806ZZUxfOG7n/vgLdzpZtFyBDwK8cMaYz4RZIeqFWxAXf@tEozdxCVSndVaeZsGpTOtNkKVXq1k9ka@IEcikEg4xyHvCfyfwPeE82jIUkEzmtOClrT6ulyH9tL14/T1Gw" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-7, ~15-30 seconds; calculate the powers but don't multiply them together)</a></p>
 <p>takes input and output as unary <code>#</code>s. TIO links include conversion to/from decimal in header/footer.</p>
 <p>I'll come back and explain better later, but essentially, I make a loop that multiplies the first line of the PATTERN space by the first line of the HOLD space without killing the rest of the HOLD space. this allows me to store other loop variables and preliminary results on other lines in the HOLD space.</p>
 <p>I finally cleaned up the formatting a bit -- all labels are now at the start of a line and <code>t*</code> jumps to the appropriate label iff a successful swap happened since the last <code>T</code>. it should now be much easier to read even if you don't know much about sed.</p>
+</div>
+<div id="pu1" class="pu"><h1>Swift 6, 69 bytes</h1>
+<pre class="lang-swift prettyprint-override"><code>import Foundation
+let h={(1...$0).map{pow(.init($0),$0)}.reduce(1,*)}
+</code></pre>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/TehFlaminTaco/ARBLE" rel="nofollow noreferrer">ARBLE</a>, 18 bytes</h1>
 
