--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240908T024939Z
+"   /golfscore                                      20240908T064229Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/94348.html">Prime counting function                         : 0094348</a>
 <a href="q/235964.html">Implement the hyperfactorial                    : 0235964</a>
 <a href="q/275210.html">Parse Minecrafts VarInt                         : 0275210</a>
 <a href="q/258232.html">Summing the Digits of a Number                  : 0258232</a>
