--- a/q/275413.html
+++ b/q/275413.html
@@ -45,7 +45,8 @@ def tree_count(nodes, max_height):
         for i in range(1, nodes)
     ) // (nodes - 1)
 </code></pre>
-<p><a href="https://tio.run/##dVLbatwwEH3XVwyGgJQ6l01DaRYc8gV9yGspQrHHsagtGUmGpGG/fTOSN7acEr1Jcy5zZjS@hs6a7z9HdzzqYbQuQDuZOljbe9Y6O0DQA8KpNDpbo/cyvknjGWMPC/qyd5OsVd0hH9SL1/@w@mUNCtZgC8EhytpOJnBjG/QlEEZ2qJ@7IPYM6OgWUgmqCnbzUzwOw@QMaGKuFLiHa8Gysp8GvlDiJTPUGzM4Bz7AvoK5EbgALeDqCppYyVhDziLUTiz68bTWQUNdgVPmGfmuhEUOvn0GU7Tc7YyYFPJ6g1kZUVr/Lz0DUq@LGPmwNN8BlZ8c8jj20zx9ULSx6vPO@KwT1FOPVP2db6aETiR7s9onxfTYrY8mZfyTlNA0X7pgr0aPsc4j7GJuijLADu8SYnRxs23xFn0Oe3g7UQ7gsbam8cVmz6dqOff/EV5pkydPPQT1FymQJO/NcGbEEvoy/VhZ96jcx2gWurwpl0HlIvRTbsSm/UcVtKXucy6lXK@HIick0bg7@hlSGkUoGb9EIWUMI2UxJ0nJIkGbcQpcCMGOxx@37w" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p><strong><a href="https://tio.run/##dVLbatwwEH3XVwyGgJQ6l01DaRYc8gV9yGspQrHHsagtGUmGpGG/fTOSN7acEr1Jcy5zZjS@hs6a7z9HdzzqYbQuQDuZOljbe9Y6O0DQA8KpNDpbo/cyvknjGWMPC/qyd5OsVd0hH9SL1/@w@mUNCtZgC8EhytpOJnBjG/QlEEZ2qJ@7IPYM6OgWUgmqCnbzUzwOw@QMaGKuFLiHa8Gysp8GvlDiJTPUGzM4Bz7AvoK5EbgALeDqCppYyVhDziLUTiz68bTWQUNdgVPmGfmuhEUOvn0GU7Tc7YyYFPJ6g1kZUVr/Lz0DUq@LGPmwNN8BlZ8c8jj20zx9ULSx6vPO@KwT1FOPVP2db6aETiR7s9onxfTYrY8mZfyTlNA0X7pgr0aPsc4j7GJuijLADu8SYnRxs23xFn0Oe3g7UQ7gsbam8cVmz6dqOff/EV5pkydPPQT1FymQJO/NcGbEEvoy/VhZ96jcx2gWurwpl0HlIvRTbsSm/UcVtKXucy6lXK@HIick0bg7@hlSGkUoGb9EIWUMI2UxJ0nJIkGbcQpcCMGOxx@37w" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></strong></p>
+<p>For 128 on TIO, I see times as low as 8.718098892 seconds, whereas locally I see times as low as 2.484375 seconds.</p>
 </div>
 
 <table id="st">
