--- a/q/275413.html
+++ b/q/275413.html
@@ -26,11 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>084</td><td>Python 3.8 prerelease</td><td>240908T183007Z</td><td><a href="https://codegolf.stackexchange.com/questions/275413/p%c3%b3lya-trees-counted-efficiently/275420#275420">Jonathan</a></td></tr>
+<tr d-ix="0"><td>125</td><td>Python 3.8 prerelease</td><td>240908T183007Z</td><td><a href="https://codegolf.stackexchange.com/questions/275413/p%c3%b3lya-trees-counted-efficiently/275420#275420">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 8.4 on a &quot;good day&quot;</h1>
-<p>(Times seem highly variable <code>¯\_(ツ)_/¯</code>)</p>
-
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, ~12.5</h1>
 <pre class="lang-python prettyprint-override"><code>import functools
 
 @functools.lru_cache(maxsize=None)
@@ -46,7 +44,30 @@ def tree_count(nodes, max_height):
     ) // (nodes - 1)
 </code></pre>
 <p><strong><a href="https://tio.run/##dVLbatwwEH3XVwyGgJQ6l01DaRYc8gV9yGspQrHHsagtGUmGpGG/fTOSN7acEr1Jcy5zZjS@hs6a7z9HdzzqYbQuQDuZOljbe9Y6O0DQA8KpNDpbo/cyvknjGWMPC/qyd5OsVd0hH9SL1/@w@mUNCtZgC8EhytpOJnBjG/QlEEZ2qJ@7IPYM6OgWUgmqCnbzUzwOw@QMaGKuFLiHa8Gysp8GvlDiJTPUGzM4Bz7AvoK5EbgALeDqCppYyVhDziLUTiz68bTWQUNdgVPmGfmuhEUOvn0GU7Tc7YyYFPJ6g1kZUVr/Lz0DUq@LGPmwNN8BlZ8c8jj20zx9ULSx6vPO@KwT1FOPVP2db6aETiR7s9onxfTYrY8mZfyTlNA0X7pgr0aPsc4j7GJuijLADu8SYnRxs23xFn0Oe3g7UQ7gsbam8cVmz6dqOff/EV5pkydPPQT1FymQJO/NcGbEEvoy/VhZ96jcx2gWurwpl0HlIvRTbsSm/UcVtKXucy6lXK@HIick0bg7@hlSGkUoGb9EIWUMI2UxJ0nJIkGbcQpcCMGOxx@37w" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></strong></p>
-<p>For 128 on TIO, I see times as low as 8.718098892 seconds, whereas locally I see times as low as 2.484375 seconds. The variance in times seems quite large and so the headline ratio of times is also (8.4 through to 24.7 have been observed without more than 50 runs, i.e. a &quot;good day&quot; is when 64 ran slow and 128 ran quickly).</p>
+<p>Comparing the best of 10 for 128 with the best of 10 for 64 locally:</p>
+<pre><code>64: 0.3564850001130253 seconds
+64: 0.354586600093171 seconds
+64: 0.34739749995060265 seconds
+64: 0.3520206999965012 seconds
+64: 0.35501500009559095 seconds
+64: 0.3540529999881983 seconds
+64: 0.3504652001429349 seconds
+64: 0.35809569992125034 seconds
+64: 0.36698739998973906 seconds
+64: 0.3678796999156475 seconds
+128: 4.400793200125918 seconds
+128: 4.383526899851859 seconds
+128: 4.399534699972719 seconds
+128: 4.373627800028771 seconds
+128: 4.390383999794722 seconds
+128: 4.388113199966028 seconds
+128: 4.3945054998621345 seconds
+128: 4.3814515001140535 seconds
+128: 4.363093799911439 seconds
+128: 4.397979799890891 seconds
+min times: [0.34739749995060265, 4.363093799911439]
+ratio: 12.559370175467121
+</code></pre>
 </div>
 
 <table id="st">
