--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240908T195017Z
+"   /golfscore                                      20240908T201054Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/77857.html">Expand a C array                                : 0077857</a>
 <a href="q/89429.html">Help Sam understand chess                       : 0089429</a>
 <a href="q/275413.html">Plya trees counted efficiently                  : 0275413</a>
 <a href="q/255650.html">Sum every second digit in a number              : 0255650</a>
