--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240909T075237Z
+"   /golfscore                                      20240909T083644Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/245992.html">Find the weight of five apples                  : 0245992</a>
 <a href="q/255650.html">Sum every second digit in a number              : 0255650</a>
 <a href="q/249247.html">Print the ASCII Code page                       : 0249247</a>
 <a href="q/133109.html">Sum of all integers from 1 to n                 : 0133109</a>
